0.1.x
=====
- Update COPYING to the latest version of GPL2 (bug #7796).
- Link all plugins that use rint() against libm (bug #8236).

0.1.23
======
- Fix generation of video images by starting the pipeline (bug #7996).
- Fix ownership race conditions when started twice (bug #8001).
- Add an ODF thumbnailer plugin.
- Add support for OpenRaster images in the ODF thumbnailer (bug #6108).
- Add a raw image thumbnailer plugin.
- Drop AC_PROG_LIBTOOL in favor of LT_PREREQ and LT_INIT.
- Don't crash on 0x0 errors (bug #8142).
- Exit the xdg thumbnailer nicely with corrupt png files.
- Avoid huge thumbnails from libjpeg (bug #8020).
- Optimize the pixbuf thumbnailer.
- Translation updates: Icelandic, Turkish, Malay, Hungarian, Korean,
  Chinese (Taiwan), Arabic, Danish, Slovak, Ukrainian, Russian,
  Italian, Japanese, Portuguese (Brazilian), Basque, Hungarian,
  Dutch (Flemish), Chinese (China), French.

0.1.22
======
- Add coding style documentation.
- Fix compiler error on Sun Studio.
- Add a GStreamer-based thumbnailer for video thumbnails. Thanks to 
  Ross Burton for the work.
- Avoid GdkPixbuf functions deprecated in poppler >= 0.17 (bug #7649).
- Translation updates: Arabic, Basque, Catalan (Valencian),
  Chinese (China), Chinese (Taiwan), Danish, Dutch (Flemish), Finnish,
  French, German, Indonesian, Italian, Japanese, Kazakh, Korean, 
  Portuguese (Brazilian), Portuguese, Romanian, Russian, Slovak, 
  Spanish (Castilian), Swedish, Telugu, Turkish, Ukrainian.

0.1.21
======
- Update to latest revision of the thumbnail management D-Bus 
  specification where Cleanup() takes an array of base URIs instead
  of just one.
- Get rid of the inherently broken GStrv type in function signatures.
- Quit tumbler after at least 5 minutes of inactivity.

0.1.20
======
- Version bump to override incompatibly versioned packages for Maemo.
- Translation updates: Swedish.

0.1.6
=====
- Fix a possible segmentation fault in the JPEG thumbnailer plugin.